--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,7 +23,8 @@
         android:text="0"
         android:textSize="40sp"
         android:gravity="center_horizontal"
-        android:padding="8dp"/>
+        android:padding="8dp"
+        android:id="@+id/team_a_score"/>
 
 
     <Button
