--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,7 +10,7 @@
 
 <LinearLayout
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:orientation="horizontal"
     tools:context=".MainActivity">
 
@@ -28,6 +28,8 @@
             android:gravity="center_horizontal"
             android:padding="8dp"
             android:text="TEAM  A"
+            android:fontFamily="sans-serif-medium"
+            android:textColor="#FF5722"
             android:textSize="40sp" />
 
 
@@ -38,7 +40,8 @@
             android:gravity="center_horizontal"
             android:padding="8dp"
             android:text="0"
-            android:textSize="40sp" />
+            android:textSize="56sp"
+            android:textColor="#05010E"/>
 
 
         <Button
@@ -47,6 +50,9 @@
             android:layout_margin="8dp"
             android:onClick="addThreeForTeamA"
             android:text="+3"
+            android:layout_marginLeft="25dp"
+            android:layout_marginRight="25dp"
+            android:layout_marginBottom="30dp"
             android:textSize="20sp" />
 
 
@@ -56,6 +62,9 @@
             android:layout_margin="8dp"
             android:onClick="addTwoForTeamA"
             android:text="+2"
+            android:layout_marginLeft="25dp"
+            android:layout_marginRight="25dp"
+            android:layout_marginBottom="30dp"
             android:textSize="20sp" />
 
 
@@ -65,11 +74,22 @@
             android:layout_margin="8dp"
             android:onClick="addOneForTeamA"
             android:text="Free Throw"
-            android:textSize="20sp" />
+            android:textSize="20sp"
+            android:layout_marginLeft="25dp"
+            android:layout_marginRight="25dp"
+            android:layout_marginBottom="30dp"/>
     </LinearLayout>
 
 
+<!--make a divider between both teams-->
 
+    <View
+        android:layout_width="1dp"
+        android:layout_height="match_parent"
+        android:background="#3DD640"
+
+        />
+<!--line closed-->
 
     <LinearLayout
         android:layout_width="0dp"
@@ -77,13 +97,17 @@
         android:layout_weight="1"
         android:orientation="vertical">
 
+
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center_horizontal"
             android:padding="8dp"
             android:text="TEAM  B"
-            android:textSize="40sp" />
+            android:textSize="40sp"
+            android:fontFamily="sans-serif-medium"
+            android:textColor="#FF5722"/>
+
 
 
         <TextView
@@ -93,7 +117,8 @@
             android:gravity="center_horizontal"
             android:padding="8dp"
             android:text="0"
-            android:textSize="40sp" />
+            android:textSize="56sp" />
+
 
 
         <Button
@@ -102,7 +127,11 @@
             android:layout_margin="8dp"
             android:onClick="addThreeForTeamB"
             android:text="+3"
+            android:layout_marginLeft="25dp"
+            android:layout_marginRight="25dp"
+            android:layout_marginBottom="30dp"
             android:textSize="20sp" />
+
 
 
         <Button
@@ -111,7 +140,11 @@
             android:layout_margin="8dp"
             android:onClick="addTwoForTeamB"
             android:text="+2"
+            android:layout_marginLeft="25dp"
+            android:layout_marginRight="25dp"
+            android:layout_marginBottom="30dp"
             android:textSize="20sp" />
+
 
 
         <Button
@@ -120,9 +153,15 @@
             android:layout_margin="8dp"
             android:onClick="addOneForTeamB"
             android:text="Free Throw"
+            android:layout_marginLeft="25dp"
+            android:layout_marginRight="25dp"
+            android:layout_marginBottom="30dp"
             android:textSize="20sp" />
     </LinearLayout>
+
 </LinearLayout>
+
+
 
     <Button
         android:layout_width="wrap_content"
@@ -131,8 +170,10 @@
         android:textSize="30sp"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="100dp"
+        android:layout_marginBottom="115dp"
         android:onClick="resetButton"
         />
+
+
 
 </RelativeLayout>
